Fix spelling error in Animal Nexus heading

--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
         <button onclick="showMainPage()">
           <h3 style="color: black">&larr; Go back...</h3>
         </button>
-        <h1>Animal Nexts</h1>
+        <h1>Animal Nexus</h1>
         <div id="AnimalNexusThree">
           <h3>En-Route to The Magnifier</h3>
           <ul class="dungeon-timer-list">
