Add FishBowlCavern to HTML & dungeonArray

--- a/index.html
+++ b/index.html
@@ -76,8 +76,13 @@
             <sup><span id="YetiCave-totals"></span></sup>
           </a>
         </li>
+        <li class="dungeon-list-item">
+          <a href="#" onclick="showDungeon('FishBowlCavern')">
+            Fish Bowl Cavern<br />
+            <sup><span id="FishBowlCavern-totals"></span></sup>
+          </a>
+        </li>
         <strike>
-          <li class="dungeon-list-item"><a href="#">Fish Bowl Cavern</a></li>
           <li class="dungeon-list-item"><a href="#">Borghild</a></li>
           <li class="dungeon-list-item"><a href="#">Dark Chapel</a></li>
           <li class="dungeon-list-item"><a href="#">Winter Nexus</a></li>
@@ -1058,6 +1063,71 @@
             </button>
             <button
               onclick="resetAll('YetiCave', 'YetiFloorThree')"
+              style="width: 25%"
+            >
+              Reset All
+            </button>
+          </div>
+        </div>
+      </section>
+      <section id="FishBowlCavern" class="dnone dungeon-section">
+        <button onclick="showMainPage()">
+          <h3 style="color: black">&larr; Go back...</h3>
+        </button>
+        <h1>Fish Bowl Cavern</h1>
+        <div id="FishBowlTwo">
+          <h3>Two Chests</h3>
+          <ul class="dungeon-timer-list">
+            <li>
+              <h3>One</h3>
+              <p>
+                Resets in:
+                <span class="chest1remaining">00:00:00</span>
+              </p>
+              <button
+                class="loot-chest-1-btn"
+                onclick="setLastLooted(`FishBowlCavern`,`FishBowlTwo`,`1`)"
+              >
+                Loot
+              </button>
+              <button
+                disabled
+                class="reset-chest-1-btn"
+                onclick="resetChest(`FishBowlCavern`,`FishBowlTwo`,`1`)"
+              >
+                Reset
+              </button>
+            </li>
+            <li>
+              <h3>Two</h3>
+              <p>
+                Resets in:
+                <span class="chest2remaining">00:00:00</span>
+              </p>
+              <button
+                class="loot-chest-2-btn"
+                onclick="setLastLooted(`FishBowlCavern`,`FishBowlTwo`,`2`)"
+              >
+                Loot
+              </button>
+              <button
+                disabled
+                class="reset-chest-2-btn"
+                onclick="resetChest(`FishBowlCavern`,`FishBowlTwo`,`2`)"
+              >
+                Reset
+              </button>
+            </li>
+          </ul>
+          <div style="display: flex; justify-content: space-evenly">
+            <button
+              onclick="lootAll('FishBowlCavern', 'FishBowlTwo')"
+              style="width: 25%"
+            >
+              Loot All
+            </button>
+            <button
+              onclick="resetAll('FishBowlCavern', 'FishBowlTwo')"
               style="width: 25%"
             >
               Reset All
