Add Borghild to HTML & dungeonArray

--- a/index.html
+++ b/index.html
@@ -82,8 +82,13 @@
             <sup><span id="FishBowlCavern-totals"></span></sup>
           </a>
         </li>
+        <li class="dungeon-list-item">
+          <a href="#" onclick="showDungeon('Borghild')">
+            Borghild<br />
+            <sup><span id="Borghild-totals"></span></sup>
+          </a>
+        </li>
         <strike>
-          <li class="dungeon-list-item"><a href="#">Borghild</a></li>
           <li class="dungeon-list-item"><a href="#">Dark Chapel</a></li>
           <li class="dungeon-list-item"><a href="#">Winter Nexus</a></li>
           <li class="dungeon-list-item"><a href="#">Wolf Cave</a></li>
@@ -1128,6 +1133,151 @@
             </button>
             <button
               onclick="resetAll('FishBowlCavern', 'FishBowlTwo')"
+              style="width: 25%"
+            >
+              Reset All
+            </button>
+          </div>
+        </div>
+      </section>
+      <section id="Borghild" class="dnone dungeon-section">
+        <button onclick="showMainPage()">
+          <h3 style="color: black">&larr; Go back...</h3>
+        </button>
+        <h1>Borghild</h1>
+        <div id="MostlyTraps">
+          <h3>Mostly traps...</h3>
+          <ul class="dungeon-timer-list">
+            <li>
+              <h3>S of Entrance</h3>
+              <p>
+                Resets in:
+                <span class="chest1remaining">00:00:00</span>
+              </p>
+              <button
+                class="loot-chest-1-btn"
+                onclick="setLastLooted(`Borghild`,`MostlyTraps`,`1`)"
+              >
+                Loot
+              </button>
+              <button
+                disabled
+                class="reset-chest-1-btn"
+                onclick="resetChest(`Borghild`,`MostlyTraps`,`1`)"
+              >
+                Reset
+              </button>
+            </li>
+            <li>
+              <h3>Three Traps (1)</h3>
+              <p>
+                Resets in:
+                <span class="chest2remaining">00:00:00</span>
+              </p>
+              <button
+                class="loot-chest-2-btn"
+                onclick="setLastLooted(`Borghild`,`MostlyTraps`,`2`)"
+              >
+                Loot
+              </button>
+              <button
+                disabled
+                class="reset-chest-2-btn"
+                onclick="resetChest(`Borghild`,`MostlyTraps`,`2`)"
+              >
+                Reset
+              </button>
+            </li>
+            <li>
+              <h3>Three Traps (2)</h3>
+              <p>
+                Resets in:
+                <span class="chest3remaining">00:00:00</span>
+              </p>
+              <button
+                class="loot-chest-3-btn"
+                onclick="setLastLooted(`Borghild`,`MostlyTraps`,`3`)"
+              >
+                Loot
+              </button>
+              <button
+                disabled
+                class="reset-chest-3-btn"
+                onclick="resetChest(`Borghild`,`MostlyTraps`,`3`)"
+              >
+                Reset
+              </button>
+            </li>
+            <li>
+              <h3>Three Traps (3)</h3>
+              <p>
+                Resets in:
+                <span class="chest4remaining">00:00:00</span>
+              </p>
+              <button
+                class="loot-chest-4-btn"
+                onclick="setLastLooted(`Borghild`,`MostlyTraps`,`4`)"
+              >
+                Loot
+              </button>
+              <button
+                disabled
+                class="reset-chest-4-btn"
+                onclick="resetChest(`Borghild`,`MostlyTraps`,`4`)"
+              >
+                Reset
+              </button>
+            </li>
+            <li>
+              <h3>Next to 3 traps</h3>
+              <p>
+                Resets in:
+                <span class="chest5remaining">00:00:00</span>
+              </p>
+              <button
+                class="loot-chest-5-btn"
+                onclick="setLastLooted(`Borghild`,`MostlyTraps`,`5`)"
+              >
+                Loot
+              </button>
+              <button
+                disabled
+                class="reset-chest-5-btn"
+                onclick="resetChest(`Borghild`,`MostlyTraps`,`5`)"
+              >
+                Reset
+              </button>
+            </li>
+            <li>
+              <h3>East of Kiralem</h3>
+              <p>
+                Resets in:
+                <span class="chest6remaining">00:00:00</span>
+              </p>
+              <button
+                class="loot-chest-6-btn"
+                onclick="setLastLooted(`Borghild`,`MostlyTraps`,`6`)"
+              >
+                Loot
+              </button>
+              <button
+                disabled
+                class="reset-chest-6-btn"
+                onclick="resetChest(`Borghild`,`MostlyTraps`,`6`)"
+              >
+                Reset
+              </button>
+            </li>
+          </ul>
+          <div style="display: flex; justify-content: space-evenly">
+            <button
+              onclick="lootAll('Borghild', 'MostlyTraps')"
+              style="width: 25%"
+            >
+              Loot All
+            </button>
+            <button
+              onclick="resetAll('Borghild', 'MostlyTraps')"
               style="width: 25%"
             >
               Reset All
